# apple-bottom

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  HARDWARE_SPECS.md  LESSONS_LEARNED.md  LESSONS_LEARNED_TD.md  LICENSE  Makefile  NEXT_STEPS.md  PARALLEL_WORKFLOW.md  PERFORMANCE_ANALYSIS.md  QUICKSTART.md  README.md  SECURITY.md  applebottom.pc.in  ex15d_td_proof_validation.swift  ex16_td_dgemm.swift  ex17e_twosided_ziv.swift  ex19_reviewer_response.swift  ex19b_random_kappa.swift
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_report.md
.github/workflows/: build-test.yml  vv-regression.yml
benchmarks/: bench_async.c  bench_device_residency.c  bench_dgemm.c  bench_dsyrk.c  bench_dtrsm.c  bench_paper.c  bench_pool.c  bench_rect_dgemm.c  bench_rect_zgemm.c  bench_sgemm.c  bench_zgemm.c  bench_zherk.c
benchmarks/configs/: rect_dgemm.txt  rect_zgemm.txt
benchmarks/results/2026-04-22-94a699d-run2/: zgemm.csv
benchmarks/results/2026-04-22-b9b0641/: dgemm.csv  sgemm.csv  zgemm.csv
benchmarks/results/2026-04-23-5cfcd52/: bench_paper.csv
benchmarks/results/2026-04-24-271a0f0-rect/: dgemm_auto_sweep1.csv  dgemm_auto_sweep2.csv  dgemm_cpu_sweep1.csv  dgemm_cpu_sweep2.csv  dgemm_gpu_sweep1.csv  dgemm_gpu_sweep2.csv  zgemm_auto_sweep1.csv  zgemm_auto_sweep2.csv  zgemm_cpu_sweep1.csv  zgemm_cpu_sweep2.csv  zgemm_gpu_sweep1.csv  zgemm_gpu_sweep2.csv
benchmarks/scripts/: run_rect_sweep.sh
docs/: BENCHMARK_SUMMARY.md  COMPARISON.md  FUTURE_SPLIT.md  INTEGRATION.md  RELEASING.md  REPRODUCIBILITY.md  ROADMAP.md  fortran-integration.md  qe-integration.md
docs/blog/: fp64-on-apple-silicon.md
docs/design/: FP32_UTILIZATION.md  RECTANGULAR_TILING.md
docs/review/: REVIEW_04_TRANCHE_A_2026-04-24.md  SKILL_EDITS_2026-04-23.md  SKILL_EDITS_2026-04-25.md  SKILL_STRIKE_2026-04-23_comp13.md
docs/vv/: DD_PRIMITIVES_CURRENT.md  LIMITATIONS.md  PRECISION_ENVELOPE.md  VV_REPORT.md
docs/vv/powermetrics/: 2026-04-22-bench_paper.txt  2026-04-23-dgemm-tightloop.txt
examples/01_basic_dgemm/: main.c
exercises/: BLAS.swift  DGEMM.metal  Package.swift  init_repo.sh
exercises/01_complex_arithmetic/: ex01  ex01_complex_arithmetic.swift
exercises/02_complex_dot_product/: ex02  ex02_complex_dot_product.swift  old.ex02_complex_dot_product.swift
exercises/03_tiled_sgemm/: ex03  ex03_tiled_sgemm.swift
exercises/04_register_blocked_cgemm/: ex04  ex04_register_blocked_cgemm.swift  old.ex04_register_blocked_cgemm.swift
exercises/04b_block_size_comparison/: ex04b  ex04b_block_size_comparison.swift
exercises/05_stockham_fft/: ex05  ex05_stockham_fft.swift  old.ex05_stockham_fft.swift
exercises/06_batched_3d_fft/: ex06  ex06_batched_3d_fft.swift
include/: apple_bottom.h  apple_bottom_device.h
python/: INDEX.md  QUICKSTART.md  README.md  setup.py
python/apple_bottom/: __init__.py
python/examples/: demo_dgemm.py
research/internal/: RECTANGULAR_MATRICES.md
research/td-dgemm/: README.md  ex18_dd_correction.swift
scripts/: analyze_gemm_profile.py  bench_regression.sh  bench_report.sh  perf_regression.sh  pre-commit  validate_environment.sh
src/: apple_bottom.m  blas_wrapper.c  device_api.m  fortran_bridge.c
src/profiling/: blas_profiler.c  blas_profiler.h
tests/: README.md  TESTING_SUMMARY.md  test_chaos.c  test_correctness.c  test_device_api.c  test_ghost_detection.c  test_original_rectangular.c  test_precision.c  test_qe_integration.sh  test_rectangle_debug  test_rectangle_debug.c  test_rectangular  test_rectangular.c  test_rectangular_diag.c  test_registry.h
tests/validation/: VAL001_QE_Si64.md
tests/verification/: test_convergence.c
